--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         tools:context="com.example.android.quiz.MainActivity">
 
         <TextView
@@ -97,6 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginTop="32dp"
             android:background="@color/colorPrimary"
             android:gravity="center"
@@ -110,42 +113,46 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <CheckBox
-                android:id="@+id/cb31"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="32dp"
-                tools:text="one answer"/>
-            <CheckBox
-                android:id="@+id/cb32"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="32dp"
-                tools:text="one answer"/>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <CheckBox
-                android:id="@+id/cb33"
-                style="@style/TextAppearance.AppCompat.Subhead"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
-                tools:text="one answer"/>
-            <CheckBox
-                android:id="@+id/cb34"
-                style="@style/TextAppearance.AppCompat.Subhead"
+                android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cb31"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="32dp"
+                    tools:text="one answer"/>
+                <CheckBox
+                    android:id="@+id/cb32"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="32dp"
+                    tools:text="one answer"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="32dp"
-                tools:text="one answer"/>
+                android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cb33"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="32dp"
+                    tools:text="one answer"/>
+                <CheckBox
+                    android:id="@+id/cb34"
+                    style="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="32dp"
+                    tools:text="one answer"/>
+            </LinearLayout>
         </LinearLayout>
 
         <TextView
@@ -205,6 +212,7 @@
             android:layout_margin="16dp"
             android:paddingRight="16dp"
             android:paddingLeft="16dp"
+            android:layout_gravity="center"
             android:text="@string/score_button" />
     </LinearLayout>
 </ScrollView>
